--- a/src/main/resources/css/dashboard.css
+++ b/src/main/resources/css/dashboard.css
@@ -213,14 +213,17 @@ h2 {
     }
 }
 
+.featured-watches{
+    margin-top: 5rem;
+}
 
 /*featured*/
 .featured-watch {
     display: flex;
     align-items: center;
     gap: 0.75rem;
-    margin: 1.5rem;
-    padding: 1rem;
+    margin: 0.2rem;
+    padding: 2rem;
     background-color: var(--black);
     border: 3px solid var(--gold);
     border-radius: 12px;
